# didwebvh-server-py

./: .gitignore  README.md
demo/: demo_script.py  demo_script.py.backup  docker-compose.yml  hs_codes_mining.py  provision.py  provision_untp.py  pyproject.toml  test_credentials.py  test_hs_codes.py  test_untp_models.py  untp_models.py
demo/agent/: configs.yml
demo/anoncreds/: .env.demo  Dockerfile  README.md  config.py  main.py  pyproject.toml  sample.example.json
demo/anoncreds/app/: __init__.py  operations.py  utils.py
demo/anoncreds/app/models/: demo.py
demo/anoncreds/app/routes/exchanges/: __init__.py
demo/anoncreds/app/routes/webhooks/: __init__.py
demo/anoncreds/app/services/: __init__.py  agent.py  askar.py
demo/anoncreds/app/templates/components/: actions.jinja  chat.jinja  connection.jinja  credential.jinja  didcomm.jinja
demo/anoncreds/app/templates/components/modals/: identifiers.jinja  invitation.jinja  mobiles.jinja  preview.jinja  resource.jinja
demo/anoncreds/app/templates/components/scripts/: exchanges.jinja  sync.jinja
demo/anoncreds/app/templates/layouts/: base.jinja  base.min.jinja
demo/anoncreds/app/templates/pages/: connection.jinja  index.jinja  offer.jinja  request.jinja  resource.jinja  verify.jinja
demo/demo_dids/: did.jsonl  keys.sqlite
demo/tests/: README.md  TEST_RESULTS.md  __init__.py  test_context_validation.py  test_pydantic_schemas.py  test_untp_schemas.py
server/: .env.example  Dockerfile  README.md  TESTING_SUMMARY.md  alembic.ini  config.py  init_db.py  main.py  pyproject.toml  test_results.txt
(+44 files in other folders)
