[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "did-webvh>=1.0.0",
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqids>=0.5.0",
]
